# e-commerce-analytics-platform

./: .encryption_key  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .safety-ignore  CI_CD_STABILITY_PLAN.md  Claude.md  ECAP_execution_summary.md  ECAP_planning.md  ECAP_prd.md  ECAP_tasklist.md  LICENSE  Makefile  README.md  TASK_COMPLETION_CHECKLIST.md  alembic.ini  docker-compose.yml  pyproject.toml  secrets.encrypted
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/workflows/: README.md  ci.yml  dependency-update-simple.yml  dependency-update.yml  dependency-update.yml.disabled  release.yml  test-simple.yml
ai_docs/: CI_CD_STABILITY_PLAN.md  CLAUDE.md  COMPREHENSIVE_ISSUES_COMPLETION_SUMMARY.md  DEPENDENCY_MANAGEMENT_STRATEGY.md  ECAP_archive_phase1-4.md  ECAP_archive_phase1-5.md  ECAP_execution_summary.md  ECAP_planning.md  ECAP_prd.md  ECAP_tasklist.md  FLAKE8_STREAMING_IMPROVEMENTS.md  INTEGRATION_TEST_COVERAGE_STRATEGY.md  ISSUE_22_COMPLETION_SUMMARY.md  ISSUE_24_COMPLETION_SUMMARY.md  ISSUE_26_IMPLEMENTATION.md  ISSUE_30_COMPLETION_SUMMARY.md  ISSUE_31_COMPLETION_SUMMARY.md  MYPY_IMPROVEMENTS_SUMMARY.md  PROGRESSIVE_TEST_COVERAGE_STRATEGY.md  PYSPARK_TESTING_SOLUTION.md  SUPERCLAUDECONFIG.md  SUPERCLAUDETRAINING.md  TASK_COMPLETION_CHECKLIST.md  TEST_COVERAGE_IMPROVEMENT_SUMMARY.md
alembic/: env.py
alembic/versions/: 2025_07_18_0816-70e4ba23d616_initial_database_schema.py
alerting/: README.md
alerting/alert_rules/: intelligent_alerts.yml
alerting/escalation/: escalation_procedures.yml
alerting/incident_response/: automated_incident_response.py
alerting/oncall/: oncall_config.yml  oncall_rotation_manager.py
alerting/runbooks/: api_service_down.md  fraud_detection_down.md
alerting/testing/: test_alerting_system.py
config/: default.yaml  development.yaml  local.yaml.example  production.yaml  secrets.yaml  staging.yaml
config/alertmanager/: alertmanager.yml
config/kafka/: jmx_prometheus_javaagent.yml
config/minio/: init-buckets.sh
docker/: Dockerfile.test
docs/: 1.2.1 - docker-setup.md  1.2.2 - monitoring-setup.md  1.2.3 - local-setup.md  1.3.1 - database-setup.md  1.3.2 - kafka-setup.md  1.3.3 - data-generation.md  2.1.1 - transaction_producer.md  2.1.2 - user_behavior_producer.md  2.1.3 - reliability-features.md  2.3.1 - data-lake.md  2.3.3 - data-lifecycle-management.md  3.1.2 - clv-customer-lifetime-value.md  3.1.4 - customer-journey-analytics.md  3.2.2 - rule-based-fraud-detection.md  4.1.2 - authentication-authorization.md  4.1.3 - analytics-data-endpoints.md  4.1.4 - performance-optimization-caching.md  4.2.1 - streamlit-dashboard.md  6.1.2-property-based-testing-guide.md  6.2.2 - performance-testing-guide.md  7.1.1-api-documentation.md  7.1.1-deployment-configuration-guide.md  7.1.1-system-architecture.md  7.1.1-troubleshooting-maintenance-guide.md  7.1.2-performance-tuning-guide.md  7.2.1-business-user-guide.md  7.2.1-training-materials.md  7.2.2-operational-runbooks.md  E_COMMERCE_DATA_PIPELINE_ARCHITECTURE.md  churn-prediction.md  data-generation.md  data-lifecycle-management.md  database-setup.md  delta-lake-integration.md  disaster_recovery_guide.md  disaster_recovery_quick_start.md  docker-setup.md  kafka-setup.md  local-setup.md  ml-fraud-models.md  (+7 more)
examples/: anomaly_detection_example.py  authentication_demo.py  churn_prediction_example.py  clv_analysis_example.py  config_management_demo.py  customer_journey_example.py  data_governance_demo.py  data_lake_example.py  data_quality_example.py  fraud_detection_examples.py  fraud_detection_rules_example.py  lifecycle_example.py  logging_integration_demo.py  marketing_attribution_usage.py  ml_fraud_models_example.py  monitoring_integration_demo.py  rfm_analysis_example.py  streaming_transformations_example.py  transaction_producer_example.py
examples/business_intelligence/: geographic_analytics_example.py  product_analytics_example.py  revenue_analytics_example.py
examples/fraud_detection/: fraud_investigation_example.py  ml_fraud_detection_example.py
helm/ecap/: Chart.yaml  README.md  values.yaml
logging/: docker-compose.elk.yml
monitoring/: README.md  docker-compose.monitoring.yml  setup_monitoring.py
monitoring/alertmanager/: alertmanager.yml
scripts/: README.md  add_dependency.py  check-health.py  coverage_trend_tracker.py  demo_reliability_features.py  demo_streaming_consumers.py  dependency_audit.py  fix_flake8_streaming.py  generate-test-data.py  generate_quick_test_data.py  generate_stream_data.py  kafka-topics.sh  manage_database.py  manage_kafka.py  reset-data.sh  run_dashboard.py  run_pyspark_tests.sh  run_transaction_producer.sh  run_user_behavior_producer.sh  start-dev-env.sh  stop-dev-env.sh  test-monitoring.py  test-services.py  validate_dashboard.py  verify_test_data.py
src/: __init__.py  cli.py
src/analytics/: __init__.py  anomaly_detection.py  anomaly_detection_cli.py  churn_cli.py  churn_model.py  clv_cli.py  clv_model.py  config.py  customer_journey.py  customer_journey_cli.py  fraud_detection_rules.py  fraud_detection_rules_cli.py  ml_fraud_models.py  ml_fraud_models_cli.py  rfm_cli.py  rfm_segmentation.py
src/api/: README.md  __init__.py  config.py  dependencies.py  exceptions.py  main.py  run.py
src/config/: __init__.py  encryption.py  k8s_secrets.py  manager.py  vault_client.py
src/custom_logging/: formatters.py  handlers.py  middleware.py
src/dashboard/: __init__.py  main.py
src/utils/: logger.py  (+4 more)
terraform/: README.md
tests/: __init__.py  test_anomaly_detection.py  test_churn_model.py  test_clv_model.py  test_customer_journey.py  test_data_generation.py  test_data_lake.py  test_data_lake_improved.py  test_data_lake_simple.py  test_data_lifecycle.py  test_delta_lake.py  test_fraud_detection.py  test_fraud_detection_rules.py  test_kafka_setup.py  test_ml_fraud_models.py  test_reliability.py  test_rfm_core_logic.py  test_rfm_segmentation.py  test_simple_coverage.py  test_streaming_consumers.py  test_transaction_producer.py  test_user_behavior_producer.py
(+289 files in other folders)
